# e4code

./: .gitignore  Cargo.toml  Makefile  README.md  make.txt  test.txt
src/: actions.rs  buffer_tags.rs  change_tracker.rs  clipboard.rs  dialogs.rs  file_operations.rs  incremental_highlighting.rs  indentation.rs  main.rs  search.rs  settings.rs  syntax_highlighting.rs  tab_manager.rs  utils.rs
src/ui/: components.rs  helpers.rs  mod.rs  search_dialog.rs  windows.rs
